kubernetes/main/apps/default/home-assistant/addons/openthread-br/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-openthread-br
  labels: &labels
    app.kubernetes.io/name: home-assistant-openthread-br
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      containers:
        - name: openthread-br
          image: openthread/border-router:latest
          imagePullPolicy: Always
          ports:
            - name: http-web
              containerPort: 8080
            - name: http-rest
              containerPort: 8081
          resources:
            limits:
              squat.ai/zbt-2: "1"
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          volumeMounts:
            - name: data
              mountPath: /data
            - name: net-tun
              mountPath: /dev/net/tun
      hostNetwork: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: home-assistant-openthread-br
        - name: net-tun
          hostPath:
            path: /dev/net/tun
